<resources>
    <string name="app_name">EventTest</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAeMQXpn0-Ju6aPCb6aEqptAHftXzId_9w</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ok">OK</string>
    <string name="all_events">All events map</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="delete">Delete</string>
    <string name="add_new_event">Add a new event</string>
    <string name="title">Title : </string>
    <string name="description">Description : </string>
    <string name="address">Address</string>
    <string name="start_date">Start date : </string>
    <string name="end_date">End date : </string>
    <string name="confirm">Confirm</string>
    <string name="field_needed">this field is required</string>
    <string name="address_display">Address : </string>
    <string name="no_events">No events</string>
    <string name="no_address_found">No address found</string>
    <string name="insert_success">The event is saved in the database</string>
    <string name="insert_fail">An error has occurred</string>
    <string name="want_to_delete">Do you really want to delete this event?</string>
</resources>
