<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="event"
            type="com.example.eventtest.model.Event" />
    </data>

    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="6dp"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="150dp">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingRight="5dp"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@{event.title}"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingRight="5dp"
                android:gravity="start"
                />


            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@{event.description}"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_display"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingRight="5dp"
                android:gravity="start"
                />


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@{event.address}"/>

        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>
